[metadata]
name = evolve-words
description = A simple illustration of mutation aiding evolution
version = attr: evolve_words.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/evolve-words
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = evolution, science, example, illustration
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Terminals
    Typing :: Typed
project_urls =
    Documentation = https://github.com/davep/evolve-words/blob/main/README.md
    Source = https://github.com/davep/evolve-words
    Issues = https://github.com/davep/evolve-words/issues
    Discussions = https://github.com/davep/evolve-words/discussions

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    textual>=0.40.0
    textual-plotext>=0.2.1
python_requires = >=3.8

[options.package_data]
evolve_words = py.typed

[options.entry_points]
console_scripts =
    evolve-words = evolve_words.__main__:run

### setup.cfg ends here
